--- a/dealsOfTheDay.html
+++ b/dealsOfTheDay.html
@@ -55,9 +55,9 @@
             padding:5px;
         }
         .product-row .product-box{
-            float:left;
+            overflow:auto;
             height:100%;
-            width:120px;
+            min-width:120px;
             text-align: center;
         }
         .product-row .product-box img{
