--- a/fkPositions/dealsOfTheDay.html
+++ b/fkPositions/dealsOfTheDay.html
@@ -53,11 +53,11 @@
             display: flex;
             flex-direction: row;
             padding:5px;
+            overflow: auto;
         }
         .product-row .product-box{
-            float:left;
             height:100%;
-            width:120px;
+            min-width:120px;
             text-align: center;
         }
         .product-row .product-box img{
@@ -75,7 +75,7 @@
             border-radius: 10px;
             margin-right: 10px;
         }
-
+       
     </style>
 </head>
 <body>
@@ -146,7 +146,6 @@
                     <p style="color:green"> Rs.50,000/-</p>
                     <p>This is Laptop</p>
                 </div>
-                
             </div>
         </div>
     </div>
