--- a/randombg.html
+++ b/randombg.html
@@ -15,7 +15,7 @@
             display:flex;
             justify-content: center;
             align-items: center;
-            background-color: aqua;
+            background-color: rgb(103, 9, 220);
         }
         .change-bg-button{
             height:50px;
