--- a/fkPositions/fkPositions.html
+++ b/fkPositions/fkPositions.html
@@ -5,104 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        *{
-            margin:0%;
-        }
-        .header{
-            display: grid;
-            height:50px;
-            background-color: rgb(40, 116, 240);
-            flex-direction: row;
-            font-family:Roboto;
-            font-size: 14px;
-            position:sticky;
-            width:100%;
-            grid-template-rows: 100%;
-            grid-template-columns: 20% 40% 40%;
-        }
-        .fk-heading{
-            font-size:45px;
-            color:white;
-            grid-row:1/2;
-            grid-column: 1/2;
-            text-align: right;
-            line-height: 50px;
-            padding-right: 10px;
-        }
-        .search-bar-inp-class{
-            height: 80%;
-            width:100%;
-            text-align: left;
-            padding-left: 10px;
-        }
-        .searchbar{
-            padding: 10px;
-            grid-column: 2/3;
-            grid-row: 1/2;
-            color:black;
-            border:0px ;
-        }
-        .menu-bar{
-            line-height: 50px;
-            grid-column: 3/4;
-            text-align: left;
-            display: grid;
-            font-size: 20px;
-            grid-template-columns: 33% 33% 33%;
-            grid-template-rows: 100%;
-            padding-left: 20px;
-        }
-       .login-button{
-           grid-column: 1/2;
-           color:white;
-       }
-       .loginpopup{
-           position: absolute;
-           top:50%;
-           border-radius: 20px;
-           left:50%;
-           margin-top: -250px;
-           margin-left: -300px;
-           height:500px;
-           width:600px;
-           display:none;
-           background-color: aqua;
-           grid-template-columns: 40% 60%;
-           grid-template-rows: 100%;
-       }
-       .loginpopup .left{
-           border-top-left-radius: 20px;
-           border-bottom-left-radius: 20px;
-            grid-column:1/2 ;
-           background-color: rgb(40, 116, 240);
-       }
-       .loginpopup .right{
-           grid-column: 2/3;
-
-       }
-       .more-bar{
-        grid-column: 2/3;
-        color: white;
-       }
-       .cart{
-           grid-column: 3/4;
-           color:white;
-       }
-       .main-container{
-           position: relative;
-       }
-       a{
-           text-decoration: none;
-           color:white;
-       }
-       
-    </style>
-    <script>
-        document.getElementById("Login-btn").onclick=function(){
-            loginpopup.style.display = "grid";
-        }
-    </script>
+    <link rel="stylesheet" href="fkPosition.css">
 </head>
 <body>
     <div class="body-class">
@@ -112,7 +15,7 @@
                <input type="text" id="search-bar-inp" class="search-bar-inp-class" placeholder="Search anything here" />
            </div>
            <div class="menu-bar">
-              <div class="login-button"><button id="Login-btn">Login</button></div>
+              <div class="login-button"><button id="Login-btn" class="Login-btn">Login</button></div>
               <div class="more-bar">More</div>
               <div class="cart">Cart</div>
            </div>
@@ -120,21 +23,35 @@
         <div class="main-container">
             click on Login and More;
         </div>
-        <div class="loginpopup" id="login-popup-id">
+        <div class="loginpopup hide" id="login-popup-id">
             <div class="left">
-                <h1 style="color:white; font-size: 40px; margin-top: 40px ;margin-left: 20px;">
+                <h1 class="heading-login">
                     Login
                 </h1>
-                <p style="color:rgb(244, 244, 248);margin-top:10px ;margin-left: 20px;">
+                <p>
                     Get access to your Orders, Wishlist and Recommendations
                 </p>
-
             </div>
-            <div class="right"></div>
+            <div class="right">
+               <div class="inputdiv"> <input type="email" id="email"   placeholder="Enter Email or Phone Number" autocomplete="off" >
+               </div> 
+               <div class="inputdiv">
+                <input type="password" id="password" placeholder="Enter Password" autocomplete="off" > 
+               </div>
+               <div class="textwarningdiv"><p>
+                By continuing, you agree to Flipkart's <span>Terms of Use </span>and<span> Privacy Policy.</span>
+               </p></div>
+               <button class="Login-Btn">Login</button>
+               <div class="newCostumer">
+                   <a href="#">New to Flipkart ? Create an Account</a>
+               </div>
+            </div>
         </div>
         <footer>
 
         </footer>
     </div>
+
+    <script src="fkPosition.js"></script>
 </body>
 </html>
